# simdly

./: .gitignore  BENCHMARKS.md  Cargo.toml  LICENSE  README.md  bench_plots.py  benchmark_analysis.txt  benchmark_data.csv  benchmark_data.json  build.md  build.rs  current-state-summary.md  detailed_analysis.py  detailed_benchmark_analysis.txt  export_benchmark_data.py  extract_benchmark_data.py  matmul.md  mkdocs.yml
.github/workflows/: README.md  cpu-detection-test.yml  publish-crate.yml  rust-ci.yml  test-publish-avx2.yml  test-publish-macos-multi.yml  test-publish-neon.yml  test-publish-ubuntu-multi.yml  test-publish-windows-multi.yml  test-publish.yml
benches/: README.md  abs.rs  acos.rs  add.rs  addition.rs  asin.rs  atan.rs  atan2.rs  cbrt.rs  ceil.rs  cos.rs  dot.rs  eq.rs  exp.rs  f32.rs  floor.rs  hypot.rs  hypot3.rs  hypot4.rs  ln.rs  matmul.rs  matmul_tuning.rs  matmul_tuning_short.rs  outer.rs  pow.rs  readable_report.rs  sin.rs  sqrt.rs  tan.rs
benches/add/: add_avx2.rs  main.rs
benchmark_plots_bokeh/: Addition_bar_size_1024.html  Addition_bar_size_16384.html  Addition_bar_size_16777216.html  Addition_bar_size_262144.html  Addition_bar_size_33554432.html  Addition_bar_size_4194304.html  Addition_line_performance.html  Cosine_bar_size_1024.html  Cosine_bar_size_16384.html  Cosine_bar_size_16777216.html  Cosine_bar_size_262144.html  Cosine_bar_size_33554432.html  Cosine_bar_size_4194304.html  Cosine_line_performance.html
benchmark_plots_bokeh/AVX-512/: Addition_bar_size_1024.html  Addition_bar_size_16384.html  Addition_bar_size_16777216.html  Addition_bar_size_262144.html  Addition_bar_size_4194304.html  Addition_line_performance.html  Cosine_bar_size_262144.html  Cosine_bar_size_4194304.html
benchmark_plots_bokeh/f32/AVX-512/: Addition_bar_size_33554432.html  Cosine_bar_size_1024.html  Cosine_bar_size_16384.html  Cosine_bar_size_16777216.html  Cosine_bar_size_33554432.html  Cosine_line_performance.html
benchmark_plots_bokeh/f32/AVX2/: Addition_bar_size_1024.html  Addition_bar_size_16384.html  Addition_bar_size_16777216.html  Addition_bar_size_262144.html  Addition_bar_size_33554432.html  Addition_bar_size_4194304.html  Addition_line_performance.html  Cosine_bar_size_1024.html  Cosine_bar_size_16384.html  Cosine_bar_size_16777216.html  Cosine_bar_size_262144.html  Cosine_bar_size_33554432.html  Cosine_bar_size_4194304.html  Cosine_line_performance.html
benchmark_plots_bokeh/f32/NEON/: Absolute_value_bar_size_1024.html  Absolute_value_bar_size_16384.html  Absolute_value_line_performance.html  Addition_bar_size_1024.html  Addition_bar_size_16384.html  Addition_bar_size_33554432.html  Addition_line_performance.html  ArcCosine_bar_size_1024.html  ArcCosine_bar_size_16384.html  ArcCosine_line_performance.html  ArcSine_bar_size_1024.html  ArcSine_bar_size_16384.html  ArcSine_line_performance.html  Cosine_bar_size_1024.html  Cosine_bar_size_16384.html  Cosine_bar_size_262144.html  Cosine_bar_size_33554432.html  Cosine_bar_size_4194304.html  Cosine_line_performance.html
bindings/python/: README.md  pyproject.toml  test_numpy_add.py
bindings/python/simdly/: Cargo.toml  bench.py
bindings/python/simdly/src/: lib.rs
docs/: README.md  astro.config.mjs  package-lock.json  package.json
docs/javascripts/: extra.js
docs/src/components/: ArchitectureSupport.astro  FeatureCards.astro  ParallaxScript.astro  PerformanceCards.astro  PerformanceChart.astro  PerformanceHighlights.astro  RealCriterionChart.astro  RealCriterionChartAVX2.astro  RealTimePerformanceChart.astro  SimplePerformanceChart.astro  TabbedPerformanceComparison.astro
docs/src/content/docs/: index.mdx  introduction.md
docs/src/content/docs/getting-started/: installation.md  quick-start.md
docs/src/content/docs/guides/: performance.md  simd-operations.md
docs/src/content/docs/reference/: f32x8.md  simd-load.md
docs/src/styles/: custom-minimal.css  custom.css
docs/src/utils/: parseCriterionData.js
docs/stylesheets/: extra.css
examples/: axpy.rs  error_handling_demo.rs  fast_add.rs  matmul.rs  outer_product.rs  qr.c
overrides/: main.html
python/: README.md  bench.py  pyproject.toml  test_numpy_add.py  test_print_array.py  test_simdly.py
python/simdly/: Cargo.toml
python/simdly_py/: Cargo.toml
python/simdly_py/src/: lib.rs
src/: error.rs  lib.rs  main.rs  matmul.rs  utils.rs
src/linalg/: mod.rs
src/linalg/blas/: axpy.rs  dot.rs  mod.rs  nrm2.rs  qrdc.rs  qrls.rs  qrlss.rs  qrsl.rs  rot.rs  rotg.rs  scal.rs  solver.rs  swap.rs
src/simd/: fast.rs  mod.rs  slice.rs  traits.rs  utils.rs
src/simd/avx2/: abs.rs  acos.rs  add.rs  asin.rs  blis.rs  cos.rs  dot.rs  f32x8.rs  kernels.rs  math.rs  matmul.rs  mod.rs  outer.rs  panels.rs  slice.rs
src/simd/avx512/: abs.rs  acos.rs  add.rs  asin.rs  cos.rs  f32x16.rs  matmul.rs  mod.rs
src/simd/neon/: abs.rs  acos.rs  add.rs  asin.rs  cos.rs  f32x4.rs  math.rs  mod.rs  outer.rs  slice.rs
test_simdly_examples/: Cargo.toml
test_simdly_examples/src/: main.rs
tests/: abs.rs  acos.rs  asin.rs  atan.rs  atan2.rs  cbrt.rs  ceil.rs  cos.rs  exp.rs  floor.rs  hypot.rs  hypot3.rs  hypot4.rs  ln.rs  parallel_methods.rs  pow.rs  sin.rs  sqrt.rs  tan.rs
