[package]
name = "simdly"
version = "0.1.6"
edition = "2021"

authors = ["Mahdi Tantaoui <mohamedalmahdi.tantaoui@gmail.com>"]
description = " 🚀 High-performance Rust library leveraging SIMD and Rayon for fast computations."
rust-version = "1.77"
license = "MIT"
repository = "https://github.com/mtantaoui/simdly"
documentation = "https://docs.rs/simdly/"
readme = "README.md"
keywords = ["math", "SIMD", "functions", "performance",  "Numerical"]

[package.metadata.docs.rs]
# Enable all features for documentation
all-features = true
# Set target for documentation builds to include both x86_64 and aarch64 docs
targets = ["x86_64-unknown-linux-gnu", "aarch64-unknown-linux-gnu"]
# Enable cfg options for conditional compilation docs
rustdoc-args = ["--cfg", "docsrs", "--cfg", "avx2", "--cfg", "neon"]


[profile.release]
lto = "fat" 
codegen-units = 1
