[package]
name = "simdly"
version = "0.1.10"
edition = "2021"

authors = ["Mahdi Tantaoui <mohamedalmahdi.tantaoui@gmail.com>"]
description = " 🚀 High-performance Rust library leveraging SIMD and Rayon for fast computations."
rust-version = "1.77"
license = "MIT"
repository = "https://github.com/mtantaoui/simdly"
documentation = "https://docs.rs/simdly/"
readme = "README.md"
keywords = ["math", "SIMD", "functions", "performance",  "Numerical"]

[package.metadata.docs.rs]
# Enable all features for documentation
all-features = true
# Set target for documentation builds to include both x86_64 and aarch64 docs
targets = ["x86_64-unknown-linux-gnu", "aarch64-unknown-linux-gnu"]
# Enable cfg options for conditional compilation docs
rustdoc-args = ["--cfg", "docsrs", "--cfg", "avx2", "--cfg", "neon"]


[profile.release]
lto = "fat" 
codegen-units = 1

[dependencies]
rayon = "1.10.0"
rand = "0.9.2"

[[example]]
name = "matmul"
path = "examples/matmul.rs"

[[bench]]
name = "cos"
harness = false

# SIMD Math Function Benchmarks

[[bench]]
name = "abs"
harness = false

[[bench]]
name = "sin"
harness = false

[[bench]]
name = "tan"
harness = false

[[bench]]
name = "sqrt"
harness = false

[[bench]]
name = "exp"
harness = false

[[bench]]
name = "ln"
harness = false

[[bench]]
name = "asin"
harness = false

[[bench]]
name = "acos"
harness = false

[[bench]]
name = "atan"
harness = false

[[bench]]
name = "atan2"
harness = false

[[bench]]
name = "cbrt"
harness = false

[[bench]]
name = "floor"
harness = false

[[bench]]
name = "ceil"
harness = false

[[bench]]
name = "pow"
harness = false

[[bench]]
name = "hypot"
harness = false

[[bench]]
name = "hypot3"
harness = false

[[bench]]
name = "hypot4"
harness = false

[[bench]]
name = "outer"
harness = false

[[bench]]
name = "matmul"
harness = false

[[bench]]
name = "matmul_tuning"
harness = false

[[bench]]
name = "matmul_tuning_short"
harness = false

[dev-dependencies]
criterion = { version = "0.5.1", default-features = true, features=["default", "plotters"]}
ndarray = "0.16.1"
faer = "0.19.2"
rand = "0.9.2"
time-graph = { version = "0.3.2", features = ["json", "table"] }

